Fix responsive design on mobile

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,6 @@ a:hover {
 
 @media(max-width: 600px) {
     .wrapper {
-        padding: 0px 10px 0px 10px;
+        padding: 0px 5% 0px 0px;
     }
 }
